More work on paper. Commiting for checkout

--- a/Paper/paper.tex
+++ b/Paper/paper.tex
@@ -5,9 +5,11 @@
 \usepackage{amsfonts}
 \usepackage{graphicx}
 \usepackage{url}
+\usepackage{algorithm}
 \usepackage{algpseudocode}
 
 \newcommand{\fft}{\text{FFT}}
+\newcommand{\ifft}{\text{IFFT}}
 
 \title{Audio Transport}
 \date{\today}
@@ -91,43 +93,71 @@ Vertical and horizontal incoherence.
 \subsection{STFT}
 
 Like almost all spectral algorithms, this one begins with a short-time Fourier transform (STFT) and ends with it's inverse (ISTFT).
-At the cost of reduced temporal resolution, the STFT gives us access to the spectral contents of the signal in time.
+At the cost of reduced temporal resolution, the STFT gives us access to the spectral components of the signal in time.
 
-The STFT fourier transform performs a discrete time Fourier transforms on windows of size $M$ of the original signal $x(n)$. 
-These windows are separated by a hop size of $R$. The $m$th frame of the STFT is
-
+The STFT performs a discrete time Fourier transforms on windows of size $M$ of the original signal $x(n)$.
+These windows are separated by a hop size of $R$. The $\tau$th frame of the STFT is
 \begin{align}
-  X_m(\omega) = 
-  \sum_{n = -\frac{M-1}{2}}^{\frac{M - 1}{2}} 
-  x_m(n)w(n)e^{-i\omega n}
+  X(\omega, \tau) = 
+  \text{DTFT}(\tilde{x}(n, \tau)w(n))
+\end{align}
+where
+\begin{align}
+  \tilde{x}(n,\tau) = x(n + \tau R)
+\end{align}
+is a buffer of the original signal, shifted $R$ samples from the previous buffer and $w(n)$ is the synthesis window.
+$w(n)$ is defined to be nonzero for $M$ samples, 
+$n\in\left[-\frac{M - 1}{2}, \frac{M - 1}{2}\right]$, so only the $M$ most recent samples of $x(n)$ need to be kept in memory.
+
+After some computation, 
+we produce frames $Y(\omega, \tau)$ 
+which we want to use to synthesize the signal $y(n)$.
+We perform this ISTFT using the weighted overlap add method.
+As the name suggests, this method works by
+overlapping adjacent frames of the IDTFT, 
+weighting them by an analysis window $f(n)$ 
+and then adding them together.
+The weighting helps to suppress audible discontinuities at frame boundaries
+which prevents artifacts in highly nonlinear filters such as the one this paper describes.
+\begin{align}
+  \tilde{y}(n,\tau) &= \text{IDTFT}(Y(\omega, \tau))
+  \\
+  y(n) &= \sum_\tau f(n - \tau R)\tilde{y}(n - \tau R,\tau)
 \end{align}
 
-$x_m(n) = x(n + mR)$ 
-is a buffer of size $M$ of the original signal
-shifted $R$ samples from the previous buffer.
-$w(n)$ is the synthesis window of size $M$.
-
-The ISTFT can then reconstruct the
-original signal by
-
+Note that synthesizing a single sample of $y(n)$ requires overlapping
+$\frac{M}{R}$ frames which adds a latency of $M$ samples between $y$ and it's sources.
 
 In the absence of spectral modifications, 
 we can achieve perfect reconstruction 
-of a signal given that the synthesis and analysis windows obey
+of a signal transformed by the STFT and ISTFT given
+that the synthesis and analysis windows obey
 \begin{align}
-  \sum_m w(n - mR)f(n - mR) = 1,\; \forall n\in \mathbb{Z}
+  \sum_\tau w(n - \tau R)f(n - \tau R) = 1,\; \forall n\in \mathbb{Z}
+\end{align}
+I chose to use the square root of the Hann window as both the analysis and frequency window
+which gives perfect reconstruction when $R = \frac{M}{2k}$ for $k\in\mathbb{Z}$.
+\begin{align}
+  w(n) = 
+  f(n) =
+  \cos(\pi n / M)
+  %, 
+  %n\in
+  %\left[
+  %-\frac{M-1}{2}, 
+  %\frac{M-1}{2}
+%\right]
 \end{align}
 
-I chose to use the root Hann window, which gives perfect reconstruction when $R = \frac{M}{2k}$ for $k\in\mathbb{Z}$.
-\begin{align*}
-  w(n) = 
-  \cos(\pi n / M), 
-  n\in
-  \left[
-  -\frac{M-1}{2}, 
-  \frac{M-1}{2}
-\right]
-\end{align*}
+For actual computation we replace, the DTFT and IDTFT with the FFT and IFFT respectively. 
+The FFT has $M$ bins $n\in\left[-\frac{M - 1}{2}, \frac{M - 1}{2}\right]$.
+The frequency of the $n$th bin is given by
+\begin{align}
+  \omega = \frac{f_s n}{M}
+\end{align}
+where $f_s$ is sampling rate of the signal.
+Since the audio signal $x(n)$ is real, $X(\omega)$ is conjugate symmetric, so we only need to retain the positive bins $\left[0, \frac{M - 1}{2}\right]$ of the FFT.
+
 
 \subsection{Spectrum Segmentation}
 
@@ -156,41 +186,46 @@ $w_\mathcal{D}(n) = \frac{d}{dt}w(n)$:
 \begin{align}
   X_\mathcal{D}(\omega) = \fft\left(w_\mathcal{D}(n)x(n)\right)
 \end{align}
-d(root hann window)
-\begin{align*}
-   w_\mathcal{D}(n) = -\frac{\pi f_s}{M}\sin\left(\frac{\pi n}{M}\right)
-\end{align*}
-
-Nice plot.
-
-$|S| \leq N$
-Segment into how at at most $N$ segments $m$ with arrays $X_m$ 
-with center of masses $c_m$ and masses $\rho_m$.
+The derivative of our chosen window, the square root of the Hann window is:
 \begin{align}
-  \sum_{m\in S} &\rho(m) = 1
+   w_\mathcal{D}(n) = -\frac{\pi f_s}{M}\sin\left(\frac{\pi n}{M}\right)
 \end{align}
 
+TODO: Plot of segmentation
+TODO: Formalize segmentation algorithm
+
+This algorithm segments the spectrum into how at at most $N$ segments $s\in S$.
+Each is has a center $c(s)$ and a set of indices $U(s)$.
+The mass of each segment is given by 
+\begin{align}
+  \rho(s) = \frac{\sum_{n\in U(s)}|X(n)|}{\sum_{n}|X(n)|}
+\end{align}
+Note that
+\begin{align}
+  \sum_{s\in S} \rho(s) = 1
+\end{align}
 
 \subsection{Transport}
 
-After two audio signals have been segmented into $S^0$ and $S^1$
+After two audio signals have been segmented into $S_0$ and $S_1$
 we then compute a transformation matrix
-$T:S^0\times S^1\to \mathbb{R}$
-that represents the transfer of mass from one segment to the other. 
-We want this matrix to minimize the distance the centers of each segment move.
+$T\in \mathbb{R}^{S_0\times S_1}$
+whose entries represents the transfer of mass from one segment to the other. 
+We want to construct this matrix so that the total movement of mass (or work) is minimized.
+%We want this matrix to minimize the distance the centers of each segment move.
 We do not want to transport a negative mass or more mass than is available:
 \begin{align}
-  0 < T(m^0, m^1) \leq \max(\rho(m^0), \rho(m^1))
+  0 < T(s_0, s_1) \leq \max(\rho(s_0), \rho(s_1))
 \end{align}
 Additionally, we want to constrain that all of the mass receives an assignment:
 \begin{align}
-  \rho(m^0) = &\sum_{m^1\in S^1} T(m^0, m^1)
+  \rho(s_0) = &\sum_{s_1\in S_1} T(s_0, s_1)
   \;
-  \forall m^0\in S^0
+  \forall s_0\in S_0
   \\
-  \rho(m^1) = &\sum_{m^0\in S^0} T(m^0, m^1)
+  \rho(s_1) = &\sum_{s_0\in S_0} T(s_0, s_1)
   \;
-  \forall m^1\in S^1
+  \forall s_1\in S_1
 \end{align}
 %We want to construct a set of assignments $T$, where each assignment $n\in T$ 
 %assigns a mass $\rho_n$ to be transported between segments $m_n^0$ and $m_n^1$.
@@ -207,16 +242,49 @@ Additionally, we want to constrain that all of the mass receives an assignment:
   %\;
   %\forall m\in S^1
 %\end{align}
-Given constraints 6, 7, 8 we want to find the assignment $T$ that minimizes the 2-wasserstein distance between the segments.
+Given these constraints we want to find the assignment $T$ that minimizes the 2-Wasserstein distance between the segments.
 \begin{align}
-  \min_T &\sum_{\substack{m^0\in S^0\\ m^1\in S^1}} T(m^0, m^1)|c(m^0) - c(m^1)|^2
+  \min_T &\sum_{\substack{s_0\in S^0\\ s_1\in S^1}} T(s_0, s_1)|c(s_0) - c(s_1)|^2
 \end{align}
-We can satisfy the constrains and approximate the using the following algorithm:
+We compute such a $T$ with algorithm~\ref{transport}.
+%We can satisfy the constrains and approximate the using the following algorithm:
 
-Plot of overlapping pieces
+\begin{algorithm}
+  \caption{Compute Transformation Matrix}\label{transport}
+\begin{algorithmic}
+  \State{$T \leftarrow 0$}
+  \State{$i,j \leftarrow 0$}
+  \State{$\rho_0 \leftarrow s_0^i$}
+  \State{$\rho_1 \leftarrow s_1^j$}
+  \While{$i < |S_0|$ and $j < |S_1|$}
+    \If{$\rho_0 < \rho_1$}
+      \State{$T(s_0^i, s_1^j) \leftarrow \rho_0$}
+      \State{$i \leftarrow i + 1$}
+      \State{$\rho_1 \leftarrow \rho_1 - \rho_0$}
+      \State{$\rho_0 \leftarrow \rho(s_0^i)$}
+    \Else
+      \State{$T(s_0^i, s_1^j) \leftarrow \rho_1$}
+      \State{$j \leftarrow j + 1$}
+      \State{$\rho_0 \leftarrow \rho_0 - \rho_1$}
+      \State{$\rho_1 \leftarrow \rho(s_1^i)$}
+    \EndIf
+  \EndWhile
+\end{algorithmic}
+\end{algorithm}
 
-Using this algorithm, we guarantee that the number of assignments is bounded by $|T| \leq 2N - 1$.
+TODO: Plot of overlapping pieces
 
+TODO: Proof - talk to Justin
+
+%Using this algorithm, the number of assignments is $2N - 1$.
+
+%From this point we could perform an interpolation.
+%With interpolation factor $k$ the new peak index would be
+%\begin{align}
+  %c' = (1 - k)c(s_0) + k(c(s_1))
+%\end{align}
+%However we must first deal with the phase
+\newpage
 \subsection{Phase Accumulation}
 
 When we move a segment of the spectrum to a new pitch, 
@@ -227,14 +295,15 @@ but it can cause interference in the overlap between windows known as \emph{hori
 Include plot
 
 One solution to this in time-stretching is to estimate the phase of the next frame based on its new instantaneous frequency. 
-If a bin with phase $\theta_i^\tau$ is oscillating at exactly $\hat{\omega}_i$, the phase of that bin in the next window $\theta_i^{\tau+1}$ will be
-\begin{align*}
-  \theta(i, \tau+1) = 
-  \theta(i,\tau) + \frac{M}{f_s}\hat{\omega}
-\end{align*}
-This model is good for , but it breaks down at transients.
-Reinitialization steps.
-
+If a sinusoid with phase $\theta(\omega, \tau)$ 
+is oscillating with instantaneous frequency $\hat{\omega}(\omega)$ over frame $\tau$, we would expect the phase of the next frame to be
+\begin{align}
+  \theta(\omega, \tau+1) = 
+  \theta(\omega,\tau) + \frac{R}{f_s}\hat{\omega}(\omega)
+\end{align}
+This model is good for signals which do not undergo rapid changes in frequency. 
+However it does a poor job of dealing with transients in audio that can happen from sharp note attacks and percussive sounds. 
+To cope with this, people employ reinitialization steps in frames where transients are detected, however this method is.
 
 Fortunately however, we have at our disposal the phases of not one but two pitches.
 The center of  will oscillate at $(1 - k)\hat{\omega}(m_0) + \hat{\omega}^1_m$.
@@ -242,36 +311,41 @@ Therefore we can interpolate.
 
 For every bin $i$ keep track of the accumulated phase $\theta_i^\tau$ which we want to have the following properties:
 
-\begin{align*}
+\begin{align}
   \Theta_i^\tau &\approx
   \sum_{t = 0}^\tau 
   \frac{R}{f_s}\hat{\omega}_i^t\\
   \Theta_i^\tau &= \theta_i^\tau\pmod{2\pi}
-\end{align*}
+\end{align}
 
 
 
 Therefore we want the synthesis phase of $\theta_i$ at the center of mass of segment $m$ is
-\begin{align*}
+\begin{align}
   \theta_{c_m} = (1-k)\Theta_{c_m^0} + k\Theta_{c_m^1}
-\end{align*}
+\end{align}
 
 To preserve the vertical coherence between all bins within a singular
 we add $\theta_{c_m}' - \theta_{c_m}$ to all pitches
-\begin{align*}
+\begin{align}
   \theta_i' = \theta_i + \theta_{c_m}' - \theta_{c_m}
-\end{align*}
+\end{align}
 
 This way all the local relationships between phases are kept.
 
 \subsection{Resynthesis}
+
+Compute new center.
+Compute new phase for horizontal coherence
+Shift phases to preserve vertical coherence
+linearly interpolate between the resulting
 
 Once the phases of each segment have been centered around the synthesis phase,
 we can synthesize a new spectrum:
 
 \begin{algorithmic}
 \\
-\For{$n\in\left[0,\frac{M-1}{2}\right]$}
+\For{all $n$}
   \State{$Y(n) \leftarrow 0$}
   \Comment{Clear the output}
 \EndFor
@@ -312,19 +386,17 @@ Since the
 I implemented the above algorithm in real-time as an audio effect in C++.
 The program listens to two streams of audio
 which can be sent to it from a any diginal audio workstation, like Ableton Live.
-It then produces a new stream of audio that is interpolated between the two original streams according to a MIDI value.
+It then produces a new stream of audio 
+whose spectrum is transported between the two
+according to a MIDI value.
+The program depends on FFTW (Fastest Fourier Transform in the West) for Fourier transforms, and the open source libraries PortAudio and PortMidi for audio and MIDI handling respectively.
 
+I work with a window size of 4096 samples and a sampling rate of 10 milliseconds. This is audible. 
 
+My code is available at
+\url{https://github.com/sportdeath/Vocoder}
 
-Real time.
-\texttt{fftw}
-
-\texttt{portaudio}
-\texttt{portmidi}
-
-video
-
-github link
+A video of my implimentation is available at.
 
 \section{Conclusion}
 
